# PET

./: .gitignore  GARFIELD.md  Shockley_Ramo_Notes.txt  Thesis Notes.txt
GATE/: README.md
GATE/2-Panel_with_HotRods/: GateMaterials.db  main.mac  run_sim.sh  vis.mac
GATE/2-Panel_with_HotRods/macro/: Geometry.mac  Phantom.mac  Physics.mac  Source.mac  Verbosity.mac  Visualisation_on.mac
GATE/BetaGammaPET/: GateMaterials.db  Physics.mac  README.md  Source_HN.mac  Verbose.mac  egammaStandardPhys.mac  main.mac  main_simple.mac
GATE/BetaGammaPET/macro/: Cu64Source.mac  Digitizer.mac  Geometry.mac  Phantom_HN.mac  Physics.mac  Source.mac  Source_HN.mac  Visualisation.mac  Zr89Source.mac  egammaStandardPhys.mac
GATE/BetaGammaPET/output/: Canvas_1.eps  Canvas_1.jpf  Canvas_1.psd  edep.py  energy_edepHisto.txt  energy_edepStepHisto.txt  (+6 more)
GATE/CZT_HN/: Geometry.mac  README.md  main_simple.mac
LiteratureReviewNotes/: Existing3GammaCameras.txt  NuclearImagingBetaGammaNotes_2006.txt  README.md  Shockley_Ramo_Notes.txt
garfieldpp-master/CMake/: setup.csh.in  setup.sh.in
garfieldpp-master/Examples/Silicon/: CMakeCache.txt  CMakeLists.txt  Makefile  cdTe  cmake_install.cmake  example  planar  planar_movie  signal_00000.txt  signal_00001.txt  signal_00002.txt  signal_00003.txt  signal_00004.txt  signal_00005.txt  signal_00006.txt  signal_00007.txt  signal_00008.txt  signal_00009.txt
garfieldpp-master/Examples/Silicon/ProjectCZT/: example.C  exampleCdTe.C
garfieldpp-master/Working/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  working  working.C
(+30 files in other folders)
